crates/shipper-core/src/state/execution_state/snapshots/shipper_core__state__execution_state__tests__error_msg_corrupted_receipt_json.snap
---
source: crates/shipper-core/src/state/execution_state/tests.rs
expression: "normalize_error(&format!(\"{err:#}\"), state_dir)"
---
failed to parse receipt JSON <STATE_DIR>/receipt.json: expected ident at line 1 column 2
