crates/shipper-core/src/state/execution_state/snapshots/shipper_core__state__execution_state__tests__error_msg_corrupted_state_json.snap
---
source: crates/shipper-core/src/state/execution_state/tests.rs
expression: "normalize_error(&format!(\"{err:#}\"), state_dir)"
---
failed to parse state JSON <STATE_DIR>/state.json: key must be a string at line 1 column 3
