crates/shipper-core/src/state/execution_state/snapshots/shipper_core__state__execution_state__tests__error_msg_receipt_version_invalid_format.snap
---
source: crates/shipper-core/src/state/execution_state/tests.rs
expression: err.to_string()
---
invalid receipt version format: not-a-version
