crates/shipper-core/src/state/execution_state/snapshots/shipper_core__state__execution_state__tests__error_msg_receipt_version_too_old.snap
---
source: crates/shipper-core/src/state/execution_state/tests.rs
expression: err.to_string()
---
receipt version shipper.receipt.v0 is too old. Minimum supported version is shipper.receipt.v1
