crates/shipper-core/src/state/execution_state/snapshots/shipper_core__state__execution_state__tests__state_all_lifecycle_variants.snap
---
source: crates/shipper-core/src/state/execution_state/tests.rs
expression: json
---
{
  "state_version": "shipper.state.v1",
  "plan_id": "all-variants-plan",
  "registry": {
    "name": "crates-io",
    "api_base": "https://crates.io",
    "index_base": "https://index.crates.io"
  },
  "created_at": "2025-01-15T12:00:00Z",
  "updated_at": "2025-01-15T12:00:00Z",
  "attempt_history": [],
  "packages": {
    "crate-a@1.0.0": {
      "name": "crate-a",
      "version": "1.0.0",
      "attempts": 0,
      "state": {
        "state": "pending"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    },
    "crate-b@1.0.0": {
      "name": "crate-b",
      "version": "1.0.0",
      "attempts": 1,
      "state": {
        "state": "uploaded"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    },
    "crate-c@1.0.0": {
      "name": "crate-c",
      "version": "1.0.0",
      "attempts": 1,
      "state": {
        "state": "published"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    },
    "crate-d@1.0.0": {
      "name": "crate-d",
      "version": "1.0.0",
      "attempts": 0,
      "state": {
        "state": "skipped",
        "reason": "already published"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    },
    "crate-e@1.0.0": {
      "name": "crate-e",
      "version": "1.0.0",
      "attempts": 3,
      "state": {
        "state": "failed",
        "class": "retryable",
        "message": "network timeout"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    },
    "crate-f@1.0.0": {
      "name": "crate-f",
      "version": "1.0.0",
      "attempts": 1,
      "state": {
        "state": "ambiguous",
        "message": "upload status unknown"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    }
  }
}
